<resources>
    <string name="app_name">Fitness App</string>
    <string name="home">Home</string>
    <string name="nav_header_title">Bem vindo,</string>
    <string name="nav_header_desc">FitnessApp Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Treinos</string>
    <string name="find_location">Encontre um lugar para treinar</string>
    <string name="select_area">Seleciona uma área de procura</string>
    <string name="sample_text">Lore Ipsum</string>
    <string name="group_indicator">Group Indicator</string>
    <string name="Search">Procurar</string>
    <string name="lista_de_exerc_cios">Lista de Exercícios</string>
    <string name="image_of_the_location">Image of the location</string>
    <string name="building_type">Insere-se nas categorias&#160;</string>
    <string name="Adress">Localiza-se em&#160;</string>
    <string name="Distance">Encontra-se a&#160;</string>
    <string name="Undefined">Local Desportivo</string>
    <string name="Current_Location">Localização Atual</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start_run">Iniciar corrida</string>
    <string name="send_message">Enviar mensagem</string>
    <string name="opne_with_maps">Abrir no Maps</string>
    <string name="invitation">Gostarias de vir comigo à zona desportiva</string>
    <string name="no_internet">Verifique a sua conexão à Internet</string>
    <string name="check_permissions">Verifique as permissões de localização</string>
    <string name="start_jogging">Iniciar uma corrida</string>
    <string name="settings">Definições</string>
    <string name="login">Login</string>
    <string name="synchronize">Sicronizar dados</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="tracking_wth_route">Corrida com Percurso</string>
    <string name="tracking_wth_route_explained">Corrida com um percurso definido, inicia a voz de assistência Jarvis, que o guiará até ao destino desejado, o seu percurso ficará marcado no mapa, se precisar de ajuda poderá usar os
    butões para pedir ao Jarvis instruções.</string>
    <string name="tracking_wthout_route">Corrida sem Percurso </string>
    <string name="tracking_wthout_route_explained">Pode correr livremente enquanto monitorizá-mos a sua velocidade, metros percorridos e calorias queimadas. Para encerrar a corrida terá que pressionar um botão.</string>
    <string name="tracking_wth_route_btn">Iniciar Corrida Com Percurso</string>
    <string name="tracking_wthout_route_btn">Iniciar Corrida Sem Percurso</string>
    <string name="medium_velocity">Velocidade Média</string>
    <string name="current_velocity">Velociade Atual</string>
    <string name="distance_travelled">Distância Percorrida</string>
    <string name="max_speed">Velocidade máx. atingida</string>
    <string name="foreground_location_update_title">Estámos a monitorizar a sua corrida</string>
    <string name="foreground_location_update_body">Utilizamos a sua localização para calcular a velocidade a que se move
    e a distância que já percorreu</string>
    <string name="start_race">Iniciar Corrida</string>
    <string name="end_race">Acabar Corrida</string>
    <string name="Velocity">0.00 km/h</string>
    <string name="distance">0.00 m</string>
    <string name="timer">Tempo de Corrida</string>
    <string name="run_statistics">Estatísticas da Corrida</string>
    <string name="Share">Partilhar</string>
    <string name="activity_summary">Resumo da atividade</string>
    <string name="fat_burnt">Calorias Queimadas</string>
    <string name="low_avg_velocity">Tiveste um ritmo lento</string>
    <string name="medium_avg_velocity">Tiveste um ritmo regular</string>
    <string name="high_avg_velocity">Tivemos um ritmo acelarado</string>
    <string name="low_max_velocity"> alcançaste uma velocidade máxima vagarosa</string>
    <string name="medium_max_velocity"> alcançaste uma velocidade máxima razoável</string>
    <string name="high_max_velocity"> alcançaste uma velocidade máxima elevada</string>
    <string name="low_dis_travelled">num percurso de curto</string>
    <string name="medium_dis_travelled">num percurso médio</string>
    <string name="high_dis_travelled">num percurso longo</string>
    <string name="numero_de_treinos_label">Número de treinos efetuados</string>
    <string name="altura_label">Altura(cm)</string>
    <string name="add_altura">addAltura</string>
    <string name="peso_atual_label">Peso(kg)</string>
    <string name="Bmi_label">Índice de massa corporal</string>
    <string name="add_peso_atual">addPesoAtual</string>
    <string name="lista_de_treinos">Lista de Treinos</string>
    <string name="nome">Nome</string>
    <string name="adicionar_exerc_cio">Adicionar Exercício</string>
    <string name="selecione_um_exerc_cio">Selecione um Exercício</string>
    <string name="nome_do_treino">Nome do Treino</string>
    <string name="exerc_cios">Exercícios</string>
    <string name="remover">Remover</string>
    <string name="adicionar">Adicionar</string>
    <string name="selecione_a_unidade">Selecione a Unidade de Referência</string>
    <string name="concluir">Concluir</string>
    <string name="ordernar_por">Ordernar por:</string>
    <string name="data_de_cria_o">Data de Criação</string>
    <string name="curr_latitude">Latitude Atual</string>
    <string name="curr_longitude">Longitude Atual</string>
    <string name="dest_latitude">Latitude do destino</string>
    <string name="dest_longitude">Longitude do destino</string>
    <string name="select_destination">Seleciona um destino no mapa</string>
    <string name="preview_route">Visualizar rota</string>
    <string name="ask_jarvis">Pede ao Jarvis para repetir a Última instrução</string>
    <string name="standard_calorie">0 kcal</string>
    <string name="run_title">Corrida do dia&#160;</string>
    <string name="empty_list">A lista está vazia...</string>
    <string name="runs">Corridas</string>
    <string name="race_done">Acabei uma corrida na app FitnessApp:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_firestore">Firestore</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_firestone">Firestone</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="statistics">Estatistica</string>
    <string name="dataCollecting">Coletar dados</string>
    <string name="name">Nome</string>
    <string name="enter_your_name">Introduza o seu nome</string>
    <string name="age">Idade</string>
    <string name="enter_your_age">Introduza a sua idade</string>
    <string name="height">Altura</string>
    <string name="enter_your_height">Introduza a sua altura</string>
    <string name="enter_your_weight">Introduza o seu peso</string>
    <string name="store_data">Guardar dados</string>
    <string name="weight">Peso Atual</string>
    <string name="estatistica">Estatistica</string>
    <string name="temperture">Temperatura</string>
    <string name="cloud_precentage">Percentagem de nuvens no céu</string>
    <string name="weather_now">Tempo atual</string>
    <string name="loading">A carregar ...</string>
    <string name="exercise_list_for_today">Lista de exercicios para hoje</string>
    <string name="min_peso">Peso mínimo registado(kg)</string>
    <string name="peso_max">Peso máximo registado(kg)</string>
    <string name="peso_overtime">Diferença de peso(kg)</string>
    <string name="button_pb">Lista de personal best (PB)</string>
    <string name="button_more_statistic">Mais estatisticas</string>
</resources>