<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tracking.FinishedRaceFragment">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/medium_velocity"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/medium_velocity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/Velocity"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/max_speed"
                android:gravity="center"
                android:maxLines="1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/max_velocity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/Velocity"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/distance_travelled"
                android:gravity="center"
                android:maxLines="1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/dis_travelled"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/distance"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="16sp"
                android:text="@string/timer" />
            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/distance"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/fat_burnt"
                android:gravity="center"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/burnt_fat"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:text="@string/standard_calorie"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_top_flat_bottom"
        android:backgroundTint="@color/blu"
        android:orientation="vertical"
        android:layout_weight="5" >
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/activity_summary"
            android:letterSpacing="0.04"
            android:typeface="sans"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/activity_sumary"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:padding="16dp"
            android:text="@string/sample_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_top_flat_bottom"
            android:backgroundTint="@color/light_gold"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_selector"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/Share"
                android:textColor="@color/light_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>