<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="26dp"
    android:elevation="64dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="sans"
                android:textSize="24sp"
                android:text="@string/sample_text"
                android:gravity="center"
                android:layout_margin="16dp">
            </TextView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"

        android:layout_weight="2"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/medium_velocity"
                android:gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/medium_velocity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/Velocity"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/max_speed"
                android:gravity="center"
                android:maxLines="1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/max_velocity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/Velocity"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/distance_travelled"
                android:gravity="center"
                android:maxLines="1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/dis_travelled"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/ring"
                android:text="@string/distance"
                android:textSize="14sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle"
            android:layout_weight="3"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:text="@string/timer" />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:text="@string/distance"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/fat_burnt"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/burnt_fat"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:text="@string/standard_calorie"
                    android:textSize="20sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>